--- a/pages/main/style.scss
+++ b/pages/main/style.scss
@@ -71,7 +71,10 @@ html {
         align-items: center;
         &__input {
             background: $tertiary;
-            display: none;
+            width: 0;
+            height: 30px;
+            visibility: hidden;
+            transition: 0.2s cubic-bezier(0, 0, 1, 1);
         }
         &__search {
             width: 32px;
@@ -80,7 +83,7 @@ html {
             @include slowTrans;
             &:hover {
                 filter: drop-shadow(0 0 10px $tertiary);
-                transform: rotate(360deg);
+                transform: rotate(90deg);
             }
         }
         &__login {
