--- a/pages/map/style.css
+++ b/pages/map/style.css
@@ -89,7 +89,11 @@ html {
 
 .header-container__input {
   background: #c5e1e5;
-  display: none;
+  width: 0;
+  height: 30px;
+  visibility: hidden;
+  -webkit-transition: 0.2s cubic-bezier(0, 0, 1, 1);
+  transition: 0.2s cubic-bezier(0, 0, 1, 1);
 }
 
 .header-container__search {
@@ -103,8 +107,8 @@ html {
 .header-container__search:hover {
   -webkit-filter: drop-shadow(0 0 10px #c5e1e5);
           filter: drop-shadow(0 0 10px #c5e1e5);
-  -webkit-transform: rotate(360deg);
-          transform: rotate(360deg);
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
 }
 
 .header-container__login {
