--- a/pages/zoos/styles/style.scss
+++ b/pages/zoos/styles/style.scss
@@ -68,7 +68,10 @@ html {
         align-items: center;
         &__input {
             background: $tertiary;
-            display: none;
+            width: 0;
+            height: 30px;
+            visibility: hidden;
+            transition: 0.2s cubic-bezier(0, 0, 1, 1);
         }
         &__search {
             width: 32px;
@@ -77,7 +80,7 @@ html {
             @include slowTrans;
             &:hover {
                 filter: drop-shadow(0 0 10px $tertiary);
-                transform: rotate(360deg);
+                transform: rotate(90deg);
             }
         }
         &__login {
@@ -179,7 +182,7 @@ html {
         font-family: Roboto Mono;
         margin-top: 2px;
         font-weight: 500;
-        font-size: 14px;
+        font-size: 0.77rem;
         line-height: 18px;
         text-align: center;
         text-transform: uppercase;
@@ -199,7 +202,7 @@ html {
     &-title {
         font-family: Rubik;
         color: $secondary;
-        font-size: 24px;
+        font-size: 1.33rem;
         line-height: 28px;
         text-transform: uppercase;
         grid-row: 1 / 2;
@@ -231,7 +234,7 @@ html {
     }
     &-subtitle {
         font-family: Rubik;
-        font-size: 18px;
+        font-size: 1rem;
         line-height: 21px;
         text-transform: capitalize;
         color: $secondary;
@@ -247,7 +250,7 @@ html {
     grid-column: 2 / 3;
     &-subtitle {
         font-family: Rubik;
-        font-size: 18px;
+        font-size: 1rem;
         line-height: 21px;
         text-transform: capitalize;
         color: $secondary;
@@ -295,7 +298,7 @@ html {
     &-title {
         font-family: Rubik;
 
-        font-size: 24px;
+        font-size: 1.33rem;
         line-height: 28px;
         text-transform: uppercase;
         color: $secondary;
@@ -307,14 +310,14 @@ html {
     row-gap: 36px;
     &-card {
         &__subtitle {
-            font-size: 16px;
+            font-size: 0.88rem;
             line-height: 19px;
             color: $secondary;
             font-weight: 500;
         }
         &__text {
             max-width: 520px;
-            font-size: 14px;
+            font-size: 0.77rem;
             line-height: 20px;
             color: $secondary;
         }
@@ -332,7 +335,7 @@ html {
         list-style: url(../../../assets/icons/facts.svg);
     }
     &-text {
-        font-size: 14px;
+        font-size: 0.77rem;
         line-height: 20px;
         color: $secondary;
     }
@@ -398,7 +401,7 @@ html {
         margin-left: auto;
     }
     &-author {
-        font-size: 16px;
+        font-size: 0.88rem;
         line-height: 19px;
         letter-spacing: 1px;
         text-align: right;
