--- a/pages/main/media/media.css
+++ b/pages/main/media/media.css
@@ -1,12 +1,5 @@
 @media (max-width: 1700px) {
-  .hero,
-  .pay,
-  .pets,
-  .about,
-  .header,
-  .footer,
-  .testimonials,
-  .animals {
+  .section {
     padding-left: 50px;
     padding-right: 50px;
   }
@@ -22,9 +15,6 @@
 }
 
 @media (max-width: 1440px) {
-  html {
-    font-size: 15px;
-  }
   .hero-image {
     padding-top: 103px;
   }
@@ -37,15 +27,6 @@
 }
 
 @media (max-width: 1200px) {
-  .header-container__search, .header-container__login, .header-container__signup {
-    display: none;
-  }
-  .header-nav {
-    display: none;
-  }
-  .header-container__btn {
-    display: unset;
-  }
   .hero-container {
     max-height: -webkit-max-content;
     max-height: -moz-max-content;
@@ -84,22 +65,6 @@
   }
   .pay-arrow {
     display: none;
-  }
-  .footer {
-    height: 150px;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: start;
-    display: -ms-grid;
-    display: grid;
-  }
-  .footer-container {
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2 / 3;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 2;
-    grid-column: 2 / 4;
   }
 }
 
@@ -141,42 +106,9 @@
   .animals-links:last-child {
     display: none;
   }
-  .footer {
-    height: 200px;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .footer-nav {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1 / 3;
-    margin: unset;
-  }
-  .footer-logo {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1 / 2;
-  }
-  .footer-container {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2 / 3;
-  }
 }
 
 @media (max-width: 600px) {
-  html {
-    font-size: 12px;
-  }
-  .menu {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    height: 300px;
-    margin-top: -300px;
-  }
   .hero-container {
     position: unset;
     -webkit-transform: unset;
@@ -185,9 +117,6 @@
   }
   .hero-text {
     margin-bottom: 50px;
-  }
-  .how {
-    bottom: 0;
   }
   .about {
     display: -ms-grid;
@@ -202,6 +131,9 @@
         -ms-flex-align: center;
             align-items: center;
     padding-bottom: unset;
+  }
+  .about-title {
+    bottom: 0;
   }
   .about-container__text {
     max-width: 150px;
@@ -276,62 +208,6 @@
   .animals {
     max-width: 400px;
     row-gap: 20px;
-  }
-  .footer {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    align-items: center;
-    height: 430px;
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-  }
-  .footer-wrapper {
-    height: 430px;
-  }
-  .footer-logo {
-    margin-top: 10px;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1 / 2;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1 / 2;
-    -ms-grid-column-align: center;
-        justify-self: center;
-  }
-  .footer-nav {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1 / 2;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2 / 3;
-  }
-  .footer-container {
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    grid-row: 3 / 4;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1 / 2;
-    margin: unset;
-    -ms-grid-column-align: center;
-        justify-self: center;
   }
   .pets-button {
     width: 270px;
