--- a/pages/main/media/media.scss
+++ b/pages/main/media/media.scss
@@ -1,12 +1,5 @@
 @media (max-width: 1700px) {
-    .hero,
-    .pay,
-    .pets,
-    .about,
-    .header,
-    .footer,
-    .testimonials,
-    .animals {
+    .section {
         padding-left: 50px;
         padding-right: 50px;
     }
@@ -26,9 +19,6 @@
 }
 
 @media (max-width: 1440px) {
-    html {
-        font-size: 15px;
-    }
     .hero-image {
         padding-top: 103px;
         &__img {
@@ -41,21 +31,6 @@
 }
 
 @media (max-width: 1200px) {
-    .header-container {
-        &__search,
-        &__login,
-        &__signup {
-            display: none;
-        }
-    }
-    .header {
-        &-nav {
-            display: none;
-        }
-        &-container__btn {
-            display: unset;
-        }
-    }
     .hero {
         &-container {
             max-height: max-content;
@@ -94,15 +69,6 @@
             display: none;
         }
     }
-    .footer {
-        height: 150px;
-        align-items: start;
-        display: grid;
-        &-container {
-            grid-row: 2 / 3;
-            grid-column: 2 / 4;
-        }
-    }
 }
 
 @media (max-width: 860px) {
@@ -136,31 +102,9 @@
             display: none;
         }
     }
-    .footer {
-        height: 200px;
-        align-items: center;
-        &-nav {
-            grid-column: 1 / 3;
-            margin: unset;
-        }
-        &-logo {
-            grid-column: 1 / 2;
-        }
-        &-container {
-            grid-column: 2 / 3;
-        }
-    }
 }
 
 @media (max-width: 600px) {
-    html {
-        font-size: 12px;
-    }
-    .menu {
-        flex-direction: column;
-        height: 300px;
-        margin-top: -300px;
-    }
     .hero-container {
         position: unset;
         transform: unset;
@@ -169,9 +113,6 @@
     .hero-text {
         margin-bottom: 50px;
     }
-    .how {
-        bottom: 0;
-    }
     .about {
         display: grid;
         flex-wrap: wrap;
@@ -179,6 +120,9 @@
         justify-content: center;
         align-items: center;
         padding-bottom: unset;
+        &-title {
+            bottom: 0;
+        }
         &-container__text {
             max-width: 150px;
         }
@@ -239,35 +183,6 @@
     .animals {
         max-width: 400px;
         row-gap: 20px;
-    }
-    .footer {
-        align-items: center;
-        flex-direction: column;
-        align-items: center;
-        height: 430px;
-        grid-template-columns: 1fr;
-        &-wrapper {
-            height: 430px;
-        }
-        &-logo {
-            margin-top: 10px;
-            grid-row: 1 / 2;
-            grid-column: 1 / 2;
-            justify-self: center;
-        }
-        &-nav {
-            align-items: center;
-            display: flex;
-            flex-direction: column;
-            grid-column: 1 / 2;
-            grid-row: 2 / 3;
-        }
-        &-container {
-            grid-row: 3 / 4;
-            grid-column: 1 / 2;
-            margin: unset;
-            justify-self: center;
-        }
     }
     .pets-button {
         width: 270px;
