--- a/pages/zoos/styles/style.css
+++ b/pages/zoos/styles/style.css
@@ -1,192 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Mono:100,200,300,regular,500,600,700,100italic,200italic,300italic,italic,500italic,600italic,700italic);
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,regular,500,600,700,800,900,300italic,italic,500italic,600italic,700italic,800italic,900italic);
-html {
-  font-size: 18px;
-}
-
-.header-hero {
-  padding-top: 110px;
-  position: relative;
-}
-
-.nav {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (auto)[5];
-      grid-template-columns: repeat(5, auto);
-  -webkit-column-gap: 52px;
-          column-gap: 52px;
-  margin-left: 53px;
-}
-
-.nav-link {
-  font-family: Roboto Mono;
-  font-weight: 500;
-  font-size: 1rem;
-  color: #c5e1e5;
-  text-transform: uppercase;
-  line-height: 40px;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-.nav-link:hover {
-  color: #0d444d;
-}
-
 .nav-link:nth-child(3) {
   border-bottom: 2px solid;
-}
-
-.header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 1920px;
-  padding: 0 220px;
-}
-
-.header-wrapper {
-  z-index: 3;
-  top: 0;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  position: fixed;
-  background: #2a8086;
-  -webkit-filter: drop-shadow(0px 1px 10px #12575b40);
-          filter: drop-shadow(0px 1px 10px #12575b40);
-  min-height: 110px;
-}
-
-.header-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  margin-left: auto;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.header-container__input {
-  background: #c5e1e5;
-  width: 0;
-  height: 30px;
-  visibility: hidden;
-  -webkit-transition: 0.2s cubic-bezier(0, 0, 1, 1);
-  transition: 0.2s cubic-bezier(0, 0, 1, 1);
-}
-
-.header-container__search {
-  width: 32px;
-  height: 32px;
-  background-image: url(../../../assets/icons/search.svg);
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-.header-container__search:hover {
-  -webkit-filter: drop-shadow(0 0 10px #c5e1e5);
-          filter: drop-shadow(0 0 10px #c5e1e5);
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
-}
-
-.header-container__login {
-  text-transform: uppercase;
-  color: #c5e1e5;
-  margin: 0 18px 0 50px;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-.header-container__login:hover {
-  color: #0d444d;
-}
-
-.header-container__signup {
-  padding: 5px 8px;
-  text-transform: uppercase;
-  color: #c5e1e5;
-  border: 1px solid #c5e1e5;
-  border-radius: 100px;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-.header-container__signup:hover {
-  background: #c5e1e5;
-  color: #0d444d;
-  -webkit-box-shadow: 0px 2px 50px #b9d5d999;
-          box-shadow: 0px 2px 50px #b9d5d999;
-}
-
-.header-container__btn {
-  display: none;
-  background: url(../../../assets/icons/menu.svg) center no-repeat;
-  width: 35px;
-  height: 35px;
-}
-
-.menu {
-  -webkit-filter: drop-shadow(0px 1px 10px #12575b40);
-          filter: drop-shadow(0px 1px 10px #12575b40);
-  height: 0;
-  z-index: -2;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: -5px;
-  -webkit-transition: 0.5s cubic-bezier(0, 0, 1, 1);
-  transition: 0.5s cubic-bezier(0, 0, 1, 1);
-  position: fixed;
-  width: 100%;
-  background: #2a8086;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-column-gap: 30px;
-          column-gap: 30px;
-}
-
-.menu-wrapper {
-  display: none;
-}
-
-.menu-link {
-  color: #c5e1e5;
-  font-family: Roboto Mono;
-  font-weight: 500;
-  font-size: 1rem;
-  color: #c5e1e5;
-  text-transform: uppercase;
-  line-height: 40px;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-.menu-link:hover {
-  color: #0d444d;
 }
 
 .main-section {
@@ -295,21 +111,21 @@ html {
 }
 
 .maincam-card__btn:first-child {
-  background: url(../../../assets/icons/i.svg) center no-repeat;
+  background: url(../../../assets/icons/info-btn.svg) center no-repeat;
   margin-right: 25px;
 }
 
 .maincam-card__btn:first-child:hover {
-  background: #c5e1e5 url(../../../assets/icons/i.svg) center no-repeat;
+  background: #c5e1e5 url(../../../assets/icons/info-btn.svg) center no-repeat;
   border-radius: 20px;
 }
 
 .maincam-card__btn:last-child {
-  background: url(../../../assets/icons/Bttn.svg) center no-repeat;
+  background: url(../../../assets/icons/like-btn.svg) center no-repeat;
 }
 
 .maincam-card__btn:last-child:hover {
-  background: #c5e1e5 url(../../../assets/icons/Bttn.svg) center no-repeat;
+  background: #c5e1e5 url(../../../assets/icons/like-btn.svg) center no-repeat;
   border-radius: 20px;
 }
 
@@ -455,7 +271,7 @@ html {
 }
 
 .donate {
-  background: url(../../../assets/images/Donate-illustrations.png) center no-repeat;
+  background: url(../../../assets/images/donate-illustration.png) center no-repeat;
   display: block;
   margin: auto;
   height: 520px;
@@ -492,69 +308,5 @@ html {
   background: #fff;
   -webkit-filter: drop-shadow(0px 2px 80px #b9d5d999);
           filter: drop-shadow(0px 2px 80px #b9d5d999);
-}
-
-.footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 1920px;
-  padding: 0 220px;
-  -ms-grid-columns: 100px 1fr;
-      grid-template-columns: 100px 1fr;
-  -ms-grid-rows: (auto)[2];
-      grid-template-rows: repeat(2, auto);
-}
-
-.footer-wrapper {
-  background: #196469;
-  height: 200px;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background: #2a8086;
-}
-
-.footer-nav {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2 / 3;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1 / 2;
-  max-width: 530px;
-}
-
-.footer-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2 / 3;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1 / 2;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-left: auto;
-}
-
-.footer-author {
-  font-size: 0.88rem;
-  line-height: 19px;
-  letter-spacing: 1px;
-  text-align: right;
-  text-transform: uppercase;
-  color: #ffffff;
 }
 /*# sourceMappingURL=style.css.map */
