--- a/pages/zoos/styles/style.scss
+++ b/pages/zoos/styles/style.scss
@@ -14,136 +14,8 @@ $borderBottom: #12575b40;
     transition: all 0.3s ease;
 }
 
-html {
-    font-size: 18px;
-}
-
-.header-hero {
-    padding-top: 110px;
-    position: relative;
-}
-
-.nav {
-    display: grid;
-    grid-template-columns: repeat(5, auto);
-    column-gap: 52px;
-    margin-left: 53px;
-    &-link {
-        font-family: Roboto Mono;
-        font-weight: 500;
-        font-size: 1rem;
-        color: $tertiary;
-        text-transform: uppercase;
-        line-height: 40px;
-        @include slowTrans;
-        &:hover {
-            color: $secondary;
-        }
-        &:nth-child(3) {
-            border-bottom: 2px solid;
-        }
-    }
-}
-
-.header {
-    display: flex;
-    align-items: center;
-    width: 1920px;
-    padding: 0 220px;
-    &-wrapper {
-        z-index: 3;
-        top: 0;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        position: fixed;
-        background: $primary;
-        filter: drop-shadow(0px 1px 10px $borderBottom);
-        min-height: 110px;
-    }
-    &-container {
-        display: flex;
-        flex-direction: row;
-        margin-left: auto;
-        align-items: center;
-        &__input {
-            background: $tertiary;
-            width: 0;
-            height: 30px;
-            visibility: hidden;
-            transition: 0.2s cubic-bezier(0, 0, 1, 1);
-        }
-        &__search {
-            width: 32px;
-            height: 32px;
-            background-image: url(../../../assets/icons/search.svg);
-            @include slowTrans;
-            &:hover {
-                filter: drop-shadow(0 0 10px $tertiary);
-                transform: rotate(90deg);
-            }
-        }
-        &__login {
-            text-transform: uppercase;
-            color: $tertiary;
-            margin: 0 18px 0 50px;
-            @include slowTrans;
-            &:hover {
-                color: $secondary;
-            }
-        }
-        &__signup {
-            padding: 5px 8px;
-            text-transform: uppercase;
-            color: $tertiary;
-            border: 1px solid $tertiary;
-            border-radius: 100px;
-            @include slowTrans;
-            &:hover {
-                background: $tertiary;
-                color: $secondary;
-                box-shadow: 0px 2px 50px $boxShadow;
-            }
-        }
-        &__btn {
-            display: none;
-            background: url(../../../assets/icons/menu.svg) center no-repeat;
-            width: 35px;
-            height: 35px;
-        }
-    }
-}
-
-.menu {
-    filter: drop-shadow(0px 1px 10px $borderBottom);
-    height: 0;
-    z-index: -2;
-    display: flex;
-    margin-top: -5px;
-    transition: 0.5s cubic-bezier(0, 0, 1, 1);
-    position: fixed;
-    width: 100%;
-    background: $primary;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    column-gap: 30px;
-    &-wrapper {
-        display: none;
-    }
-    &-link {
-        color: $tertiary;
-        font-family: Roboto Mono;
-        font-weight: 500;
-        font-size: 1rem;
-        color: $tertiary;
-        text-transform: uppercase;
-        line-height: 40px;
-        @include slowTrans;
-        &:hover {
-            color: $secondary;
-        }
-    }
+.nav-link:nth-child(3) {
+    border-bottom: 2px solid;
 }
 
 .main-section {
@@ -216,17 +88,17 @@ html {
             width: 42px;
             height: 42px;
             &:first-child {
-                background: url(../../../assets/icons/i.svg) center no-repeat;
+                background: url(../../../assets/icons/info-btn.svg) center no-repeat;
                 margin-right: 25px;
                 &:hover {
-                    background: $tertiary url(../../../assets/icons/i.svg) center no-repeat;
+                    background: $tertiary url(../../../assets/icons/info-btn.svg) center no-repeat;
                     border-radius: 20px;
                 }
             }
             &:last-child {
-                background: url(../../../assets/icons/Bttn.svg) center no-repeat;
+                background: url(../../../assets/icons/like-btn.svg) center no-repeat;
                 &:hover {
-                    background: $tertiary url(../../../assets/icons/Bttn.svg) center no-repeat;
+                    background: $tertiary url(../../../assets/icons/like-btn.svg) center no-repeat;
                     border-radius: 20px;
                 }
             }
@@ -342,7 +214,7 @@ html {
 }
 
 .donate {
-    background: url(../../../assets/images/Donate-illustrations.png) center no-repeat;
+    background: url(../../../assets/images/donate-illustration.png) center no-repeat;
     display: block;
     margin: auto;
     height: 520px;
@@ -370,42 +242,5 @@ html {
             background: #fff;
             filter: drop-shadow(0px 2px 80px $boxShadow);
         }
-    }
-}
-
-.footer {
-    display: flex;
-    align-items: center;
-    width: 1920px;
-    padding: 0 220px;
-    grid-template-columns: 100px 1fr;
-    grid-template-rows: repeat(2, auto);
-    &-wrapper {
-        background: #196469;
-        height: 200px;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        background: $primary;
-    }
-    &-nav {
-        grid-column: 2 / 3;
-        grid-row: 1 / 2;
-        max-width: 530px;
-    }
-    &-container {
-        display: flex;
-        grid-column: 2 / 3;
-        grid-row: 1 / 2;
-        flex-direction: column;
-        margin-left: auto;
-    }
-    &-author {
-        font-size: 0.88rem;
-        line-height: 19px;
-        letter-spacing: 1px;
-        text-align: right;
-        text-transform: uppercase;
-        color: #ffffff;
     }
 }
