--- a/styles/modals/modals.css
+++ b/styles/modals/modals.css
@@ -1,74 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Mono:100,200,300,regular,500,600,700,100italic,200italic,300italic,italic,500italic,600italic,700italic);
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,regular,500,600,700,800,900,300italic,italic,500italic,600italic,700italic,800italic,900italic);
-* {
-  margin: 0;
-  font-weight: normal;
-  text-decoration: none;
-  scroll-behavior: smooth;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: Roboto;
-}
-
-button {
-  cursor: pointer;
-  border: 0;
-  background: none;
-  outline: none;
-}
-
-input {
-  border: 0;
-  outline: none;
-}
-
-body {
-  background-color: #f6f9fa;
-}
-
-.logo {
-  width: 108px;
-  height: 83px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.logo-title {
-  color: #0d444d;
-  font-weight: 500;
-  font-size: 34.83px;
-  line-height: 41px;
-  letter-spacing: 2px;
-}
-
-.logo-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-.logo-icon {
-  margin-left: 5px;
-}
-
 .btn-close {
-  background: url(../icons/closee.png) center no-repeat;
+  background: url(../../assets/icons/modals/close-red.png) center no-repeat;
   width: 25px;
   height: 25px;
   position: absolute;
@@ -506,7 +440,7 @@ body {
 
 #login-close,
 #signup-close {
-  background: url(../icons/close-white.png) center no-repeat;
+  background: url(../../assets/icons/modals/close-white.png) center no-repeat;
   top: 32px;
 }
 
@@ -713,4 +647,4 @@ body {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
 }
-/*# sourceMappingURL=others.css.map */
+/*# sourceMappingURL=modals.css.map */
