--- a/styles/modals/modals.scss
+++ b/styles/modals/modals.scss
@@ -4,65 +4,18 @@ $tertiary: #c5e1e5;
 $hero-color: #f3f7f8;
 $btn-color: #0d444d;
 $boxShadow: #b9d5d999;
+$borderBottom: #12575b40;
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Mono:100,200,300,regular,500,600,700,100italic,200italic,300italic,italic,500italic,600italic,700italic);
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,regular,500,600,700,800,900,300italic,italic,500italic,600italic,700italic,800italic,900italic);
 
-* {
-    margin: 0;
-    font-weight: normal;
-    text-decoration: none;
-    scroll-behavior: smooth;
-    box-sizing: border-box;
-    font-family: Roboto;
-}
-
-button {
-    cursor: pointer;
-    border: 0;
-    background: none;
-    outline: none;
-}
-input {
-    border: 0;
-    outline: none;
-}
-body {
-    background-color: #f6f9fa;
-}
-
-@mixin tr {
+@mixin slowTrans {
     transition: all 0.3s ease;
 }
 
-.logo {
-    width: 108px;
-    height: 83px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    &-title {
-        color: $secondary;
-        font-weight: 500;
-        font-size: 34.83px;
-        line-height: 41px;
-        letter-spacing: 2px;
-    }
-    &-container {
-        display: flex;
-        flex-direction: row;
-    }
-    &-icon {
-        margin-left: 5px;
-    }
-}
-
-//---------Pop-ups---------//
-
 .btn-close {
-    background: url(../icons/closee.png) center no-repeat;
+    background: url(../../assets/icons/modals/close-red.png) center no-repeat;
     width: 25px;
     height: 25px;
     position: absolute;
@@ -208,7 +161,7 @@ body {
     font-size: 1rem;
     line-height: 24px;
     font-family: Roboto Mono;
-    @include tr;
+    @include slowTrans;
     &:hover {
         background: none;
         border: 2px solid $primary;
@@ -265,7 +218,7 @@ body {
                 line-height: 19px;
                 text-align: center;
                 border: 1px solid #19707d;
-                @include tr;
+                @include slowTrans;
                 &:first-child {
                     border-radius: 10px 0 0 10px;
                     background: #19707d;
@@ -291,7 +244,7 @@ body {
             line-height: 19px;
             text-align: center;
             color: #19707d;
-            @include tr;
+            @include slowTrans;
             &:nth-child(3) {
                 background: #19707d;
                 color: #fff;
@@ -374,7 +327,7 @@ body {
 
 #login-close,
 #signup-close {
-    background: url(../icons/close-white.png) center no-repeat;
+    background: url(../../assets/icons/modals/close-white.png) center no-repeat;
     top: 32px;
 }
 
