--- a/styles/global/global.scss
+++ b/styles/global/global.scss
@@ -163,7 +163,7 @@ body {
 .menu {
     filter: drop-shadow(0px 1px 10px $borderBottom);
     display: flex;
-    transition: 0.4s cubic-bezier(1, 1, 1, 1);
+    transition: 0.8s cubic-bezier(0.82, -0.51, 0.43, 1.67);
     position: fixed;
     width: 100%;
     z-index: 2;
@@ -173,6 +173,8 @@ body {
     align-items: center;
     justify-content: center;
     column-gap: 30px;
+    visibility: hidden;
+    margin-top: -100px;
     &-link {
         color: $tertiary;
         font-family: Roboto Mono;
@@ -186,9 +188,9 @@ body {
             color: $secondary;
         }
     }
-    &-hidden {
-    }
     &-visible {
+        visibility: visible;
+        margin: 0;
     }
 }
 
