--- a/styles/modals/media/media.css
+++ b/styles/modals/media/media.css
@@ -100,6 +100,17 @@
   #donate-payments {
     max-width: 225px;
   }
+  #donate-payments__card-btn {
+    height: 40px;
+  }
+  #donate-payments__money-btn {
+    height: 45px;
+  }
+  #donate-card__animals {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    row-gap: 5px;
+  }
   #donate-card__input {
     width: 260px;
     height: 40px;
