--- a/styles/modals/media/media.scss
+++ b/styles/modals/media/media.scss
@@ -101,8 +101,18 @@
         padding: 35px 45px;
         &-payments {
             max-width: 225px;
+            &__card-btn {
+                height: 40px;
+            }
+            &__money-btn {
+                height: 45px;
+            }
         }
         &-card {
+            &__animals {
+                flex-wrap: wrap;
+                row-gap: 5px;
+            }
             &__input {
                 width: 260px;
                 height: 40px;
