--- a/styles/modals/media/media.scss
+++ b/styles/modals/media/media.scss
@@ -63,6 +63,10 @@
     }
 }
 @media (max-width: 600px) {
+    .gratitude {
+        width: 90%;
+        padding: 30px 20px;
+    }
     .send-btn {
         width: 260px;
         height: 40px;
