--- a/styles/modals/media/media.css
+++ b/styles/modals/media/media.css
@@ -60,6 +60,10 @@
 }
 
 @media (max-width: 600px) {
+  .gratitude {
+    width: 90%;
+    padding: 30px 20px;
+  }
   .send-btn {
     width: 260px;
     height: 40px;
